# iced_baseview

./: Cargo.toml  README.md
examples/: hello_world.rs  text_input.rs  window_subs.rs
src/: application.rs  clipboard.rs  conversion.rs  lib.rs  proxy.rs  settings.rs
src/application/: state.rs
