[package]
name = "iced_baseview"
version = "0.1.0"
authors = [
  "Billy Messenger <BillyDM@protonmail.com>",
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Joakim Frostegård <joakim.frostegard@gmail.com>",
]
edition = "2021"
description = "A baseview runtime for Iced"
license = "MIT"
repository = "https://github.com/BillyDM/iced_baseview"
documentation = "https://docs.rs/iced_baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
default = ["wgpu"]
# Enable the wgu renderer
wgpu = ["iced_renderer/wgpu", "iced_widget/wgpu"]
image = ["iced_graphics/image", "iced_widget/image", "iced_renderer/image"]
svg = ["iced_graphics/svg", "iced_widget/svg", "iced_renderer/svg"]
geometry = ["iced_graphics/geometry", "iced_renderer/geometry"]
web-colors = ["iced_graphics/web-colors", "iced_renderer/web-colors"]
canvas = ["iced_widget/canvas"]
system = ["dep:sysinfo"]
trace = []
toggle_debug = []

[dependencies]
# depend on same version used in our fixed nih_plugin.
# TODO: Not sure why we need this specific commit, can we change this now?
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "3724a00c970a9cd10a3494fa3c37bca66d631bb7" }
cfg-if = "1"
window_clipboard = "0.4.1"
iced_runtime = "0.14"
iced_renderer = "0.14"
iced_graphics = "0.14"
iced_widget = "0.14"
iced_debug = "0.14"
iced_futures = { version = "0.14", features = [
  "smol",
] }
keyboard-types = { version = "0.6", default-features = false }
log = "0.4"
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
thiserror = "1.0"
sysinfo = { version = "0.30", optional = true }
